# hamming

./: README.md  hamming.cabal
src/Codes/: Bin.hs  Hamming.hs  Matrix.hs
test/: HammingTest.hs  Tasty.hs  Test.hs
