name:                hamming
version:             0.1.0.0
synopsis:            Hamming Codes
description:         Please see README.md
homepage:            http://github.com/hnitroFamily/hamming
license:             BSD3
license-file:        LICENSE
author:              nitroFamily
maintainer:          samaydanov@gmail.com
copyright:           2015 nitroFamily
category:            Codes
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codes.Hamming
                     , Codes.Bin
                     , Codes.Matrix
  build-depends:       base >= 4.7 && < 5
                     , matrix == 0.3.4.4
  default-language:    Haskell2010

test-suite hamming-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tasty.hs
  build-depends:       base
                     , hamming
                     , matrix
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nitroFamily/hamming
